infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: posts
  ports:                    #list out ports we want to expose on target pod
    - name: posts           #just a name, can be anything you want
      protocol: TCP
      port: 4000            #the port of NodePort service, it will redirect the traffic to the targetPort
      targetPort: 4000      #the actual port that the application is listening (aka. the posts service container port)
